--- a/ToDoList/WpfUI/App.xaml
+++ b/ToDoList/WpfUI/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WpfUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfUI"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfUI">
     <Application.Resources>
          
     </Application.Resources>
