Big initial Commit
- Implemented MVVM, Clean Architecture, and DI
- Added a preliminary basic UI

--- a/WpfUI/App.xaml
+++ b/WpfUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfUI.App"
+﻿<Application x:Class="PresentationLayer_WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfUI">
+             xmlns:local="clr-namespace:PresentationLayer_WPF">
     <Application.Resources>
          
     </Application.Resources>
