--- a/WpfUI/Views/MainView.xaml
+++ b/WpfUI/Views/MainView.xaml
@@ -1,12 +1,37 @@
-﻿<Window x:Class="WpfUI.Views.MainView"
+﻿<Window x:Class="PresentationLayer_WPF.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfUI.Views"
+		xmlns:vm="clr-namespace:ApplicationLayer.ViewModels;assembly=ApplicationLayer"
+        xmlns:local="clr-namespace:PresentationLayer_WPF.Views"
         mc:Ignorable="d"
-        Title="MainView" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+		WindowStyle="ToolWindow"
+        Title="Todo List"
+		MinHeight="500" Height="500"
+		MinWidth="400" Width="400"
+		Background="#222222">
+	
+	<Window.DataContext>
+		<vm:MainViewModel/>
+	</Window.DataContext>
+
+	<Grid Margin="20">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="auto"/>
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
+		
+		<Label Content="{Binding Title}" 
+			   Grid.Row="0"
+			   FontFamily="Montserrat"
+			   FontSize="24"
+			   FontWeight="Bold"
+			   Foreground="#DDDDDD">
+		</Label>
+
+		<local:ChronologicalListView 
+			Grid.Row="1"/>
+		
+	</Grid>
 </Window>
