Moving Scrollbar Style and Template Definitions
- Moved to UserControl.Resources

--- a/WpfUI/Views/ChronologicalListView.xaml
+++ b/WpfUI/Views/ChronologicalListView.xaml
@@ -6,7 +6,72 @@
 			 xmlns:vm="clr-namespace:ApplicationLayer.ViewModels;assembly=ApplicationLayer"
              xmlns:local="clr-namespace:PresentationLayer_WPF.Views"
              mc:Ignorable="d">
-	
+	<UserControl.Resources>
+		<ControlTemplate TargetType="{x:Type ScrollViewer}" x:Key="ScrollViewerControlTemplate">
+			<Grid x:Name="Grid" Background="{TemplateBinding Background}">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="Auto"/>
+				</Grid.RowDefinitions>
+
+				<ScrollBar x:Name="PART_VerticalScrollBar"
+						   Grid.Column="1"
+						   Value="{TemplateBinding VerticalOffset}"
+						   Maximum="{TemplateBinding ScrollableHeight}"
+						   ViewportSize="{TemplateBinding ViewportHeight}"
+						   Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}">
+					<ScrollBar.Template>
+						<ControlTemplate TargetType="{x:Type ScrollBar}">
+							<Grid x:Name="Root"
+								  Width="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}"
+								  Background="{TemplateBinding Background}">
+								<Track x:Name="PART_Track"
+									   IsDirectionReversed="True"
+									   Focusable="False">
+									<Track.Thumb>
+										<Thumb Background="{TemplateBinding Background}"
+											   BorderBrush="{TemplateBinding BorderBrush}"
+											   BorderThickness="{TemplateBinding BorderThickness}"
+											   Style="{DynamicResource CustomThumbStyle}"/>
+									</Track.Thumb>
+								</Track>
+							</Grid>
+						</ControlTemplate>
+					</ScrollBar.Template>
+				</ScrollBar>
+			</Grid>
+		</ControlTemplate>
+
+		<Style TargetType="{x:Type Thumb}" x:Key="CustomThumbStyle">
+			<Setter Property="SnapsToDevicePixels" Value="True" />
+			<Setter Property="OverridesDefaultStyle" Value="True" />
+			<Setter Property="Height" Value="auto" />
+			<Setter Property="Width" Value="Auto" />
+			<Setter Property="MinWidth" Value="8" />
+			<Setter Property="MinHeight" Value="8" />
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type Thumb}">
+						<Grid Background="Transparent">
+							<Rectangle x:Name="Rectangle"
+									   Fill="#AAAAAAAA"
+									   RadiusX="2"
+									   RadiusY="2"/>
+						</Grid>
+						<ControlTemplate.Triggers>
+							<Trigger Property="IsMouseOver" Value="True">
+								<Setter TargetName="Rectangle" Property="Fill" Value="#BBBBBBBB" />
+							</Trigger>
+							<Trigger Property="IsDragging" Value="True">
+								<Setter TargetName="Rectangle" Property="Fill" Value="#99999999" />
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+	</UserControl.Resources>
 	
 	<Grid>
 		<ScrollViewer MinHeight="350" 
@@ -38,41 +103,13 @@
 										   Grid.Column="0"
 										   IsDirectionReversed="True"
 										   Focusable="false">
+										
 										<Track.Thumb>
 											<Thumb x:Name="Thumb"
 												   Background="Red"
 												   BorderBrush="Green"
-												   BorderThickness="0">
-												<Thumb.Style>
-													<Style TargetType="{x:Type Thumb}">
-														<Setter Property="SnapsToDevicePixels" Value="True" />
-														<Setter Property="OverridesDefaultStyle" Value="True" />
-														<Setter Property="Height" Value="auto" />
-														<Setter Property="Width" Value="Auto" />
-														<Setter Property="MinWidth" Value="8" />
-														<Setter Property="MinHeight" Value="8" />
-														<Setter Property="Template">
-															<Setter.Value>
-																<ControlTemplate TargetType="Thumb">
-																	<Grid Background="Transparent">
-																		<Rectangle x:Name="Rectangle"
-																				   Fill="#AAAAAAAA"
-																				   RadiusX="2"
-																				   RadiusY="2" />
-																	</Grid>
-																	<ControlTemplate.Triggers>
-																		<Trigger Property="IsMouseOver" Value="True">
-																			<Setter TargetName="Rectangle" Property="Fill" Value="#BBBBBBBB" />
-																		</Trigger>
-																		<Trigger Property="IsDragging" Value="True">
-																			<Setter TargetName="Rectangle" Property="Fill" Value="#99999999" />
-																		</Trigger>
-																	</ControlTemplate.Triggers>
-																</ControlTemplate>
-															</Setter.Value>
-														</Setter>
-													</Style>
-												</Thumb.Style>
+												   BorderThickness="0"
+												   Style="{DynamicResource CustomThumbStyle}">
 											</Thumb>
 										</Track.Thumb>
 									</Track>
@@ -88,34 +125,7 @@
 						<local:ListItemView/>
 					</DataTemplate>
 				</ItemsControl.ItemTemplate>
-				</ItemsControl>
+			</ItemsControl>
 		</ScrollViewer>
-		<Grid Height="40"
-			  VerticalAlignment="Bottom" 
-			  HorizontalAlignment="Stretch">
-			<TextBlock Text="More content below" 
-					   HorizontalAlignment="Stretch" 
-					   TextAlignment="Center"
-					   Padding="8.5"
-					   VerticalAlignment="Stretch"
-					   IsHitTestVisible="False"
-					   Foreground="Gray">
-				<TextBlock.Background>
-					<RadialGradientBrush GradientOrigin="0.5,0.5">
-						<GradientStop Color="Black" Offset="0.35" />
-						<GradientStop Color="#00000000" Offset="01" />
-					</RadialGradientBrush>
-				</TextBlock.Background>
-				<!--<TextBlock.Style>
-					<Style TargetType="TextBlock">
-						<Style.Triggers>
-							<DataTrigger Binding="{Binding IsScrollViewerScrolledToEnd, ElementName=scrollViewer}" Value="True">
-								<Setter Property="Opacity" Value="0" />
-							</DataTrigger>
-						</Style.Triggers>
-					</Style>
-				</TextBlock.Style>-->
-			</TextBlock>
-		</Grid>
 	</Grid>
 </UserControl>
