--- a/WpfUI/Views/ChronologicalListView.xaml
+++ b/WpfUI/Views/ChronologicalListView.xaml
@@ -71,13 +71,72 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+
+		<Style x:Key="CustomButtonStyle" TargetType="Button">
+			<Setter Property="Width" Value="auto"/>
+			<Setter Property="Height" Value="auto"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="Button">
+						<Border x:Name="MainButtonBorder" 
+								Background="#444444" 
+								CornerRadius="7" 
+								Margin="3">
+							<Grid>
+								<Border x:Name="BackgroundBorder" Background="Transparent" BorderBrush="Transparent" BorderThickness="0" CornerRadius="7" >
+									<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+								</Border>
+								<Border x:Name="MouseoverIndicator" Background="{TemplateBinding Background}" BorderBrush="Transparent" BorderThickness="0" CornerRadius="7">
+									<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+								</Border>
+								<Label x:Name="ButtonContent" Content="{Binding Content}" Foreground="White" Background="Transparent" Margin="10">
+
+								</Label>
+							</Grid>
+						</Border>
+						<ControlTemplate.Triggers>
+							<Trigger Property="IsMouseOver" Value="True">
+								<Setter TargetName="MouseoverIndicator" Property="Visibility" Value="Visible"/>
+							</Trigger>
+							<Trigger Property="IsMouseOver" Value="False">
+								<Setter TargetName="MouseoverIndicator" Property="Visibility" Value="Hidden"/>
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
 	</UserControl.Resources>
 	
 	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
+
+		<Label Content="{Binding Title}" 
+			   Grid.Row="0"
+			   FontFamily="Montserrat"
+			   FontSize="32"
+			   FontWeight="Bold"
+			   Foreground="#DDDDDD">
+		</Label>
+		<Button Content="+"
+				FontSize="18"
+				FontFamily="Montserrat"
+				FontWeight="ExtraBlack"
+				HorizontalAlignment="Right"
+				Style="{DynamicResource CustomButtonStyle}"
+				Command="{Binding CMD_AddNewTodoTask}"
+				Foreground="White"
+				Background="Orange"/>
+
 		<ScrollViewer MinHeight="350" 
+					  Margin="0,10,0,0"
 					  HorizontalAlignment="Stretch"
 					  VerticalScrollBarVisibility="Auto"
 					  HorizontalScrollBarVisibility="Disabled"
+					  Grid.Row="1"
 					  Height="auto">
 			<!-- apply the CustomScrollViewer style to the scrollbar of this scrollviewer -->
 			<ScrollViewer.Resources>
@@ -103,7 +162,6 @@
 										   Grid.Column="0"
 										   IsDirectionReversed="True"
 										   Focusable="false">
-										
 										<Track.Thumb>
 											<Thumb x:Name="Thumb"
 												   Background="Red"
