--- a/WpfUI/Views/MainView.xaml
+++ b/WpfUI/Views/MainView.xaml
@@ -16,14 +16,7 @@
 		<vm:MainViewModel/>
 	</Window.DataContext>
 
-	<Grid Margin="20">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="auto"/>
-			<RowDefinition Height="*"/>
-		</Grid.RowDefinitions>
-
-		<local:ChronologicalListView 
-			Grid.Row="1"/>
-		
+	<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+		<local:ChronologicalListView/>
 	</Grid>
 </Window>
